# hint

./: .gitignore  .gitmodules  COPYING
aioserver/: hintbot.py  listen.py  query.py
aioserver/hintmodules/: cache.py  main.py  ratelimit.py  service.py  utils.py
aioserver/hintmodules/departure/: service.py  xso.py
aioserver/hintmodules/sensors/: backend.py  service.py  sources.py  xso.py
aioserver/hintmodules/warnings/: __init__.py  cap.py  dwd.py  service.py  xso.py
aioserver/hintmodules/weather/: common.py  forecast_io.py  met_no.py  service.py  xso.py
aioserver/tests/: test_ratelimit.py
archive/: .gitignore
archive/ethernet-node/: ethernet-node.kicad_pcb  ethernet-node.pro  ethernet-node.sch
archive/sensor-node/: .gitignore
archive/sensor-node/src/: .gitignore  USI_TWI_Master.c  USI_TWI_Master.h  allstrings.h  bcd.h  endian.h  uart.c  uart_onewire.c  uart_onewire.h
arduino/: Makefile  endian.h  sketch.cpp
arduino/OneWire/examples/DS18x20_Temperature/: DS18x20_Temperature.pde
common/: comm.h  comm_arduino.h  comm_lpc1114.h  types.h
common/botlib/: __init__.py
common/hintutils/: pathutils.py  struct_utils.py  timeline.py  timeutils.py
common/hintxso/: sensor.py
common/tests/hintutils/: test_timeline.py
display/: .gitignore  COPYING  Makefile
display/data/: 0x00000033.glyph
display/data/glyphs/Cantarell/20px/: 0x0000003a.glyph
display/data/glyphs/DejaVu Sans/9px/: 0x000000b0.glyph
display/src/: buffer.c  buffer.h  comm.c  comm.h  comm_common.inc.c  comm_i2c.inc.c  comm_internal.h  comm_uart.inc.c  config.h  draw.c  draw.h  font.c  font.h  font_data.c  font_data.h  fp11_4.h  graphs.c  graphs.h  lcd.c  lcd.h  main.c  tables.c  tables.h  time.c  time.h  touch.c  touch.h  unicode.c  unicode.h  utils.h
display/utils/: genfont.py
host/: .gitignore  CMakeLists.txt  broker.c  broker.h  comm.c  comm.h  fritzbox_toolchain.cmake  queue.c  queue.h
host/src/: array.c  array.h  broker.c  broker.h  comm.c  comm.h  config.h  departure.c  departure.h  heap.c  heap.h  hintd.c  lpcdisplay.c  lpcdisplay.h  private_config.c  queue.c  screen.c  screen.h  screen_dept.c  screen_dept.h  screen_misc.c  screen_misc.h  screen_net.c  screen_net.h  screen_party.c  screen_party.h  screen_pic.c  screen_pic.h  screen_utils.c  screen_utils.h  screen_weather.c  screen_weather.h  sensor.h  theme.h  timestamp.c  timestamp.h  utils.c  utils.h  weather.h  xmppintf.c  (+1 more)
host/utils/: img32to16.py
hostpy/: .gitignore  Makefile  hintd_comm_build.py
hostpy/faked/: __main__.py  display_widget.py  main.py
hostpy/faked/ui/: faked.py
hostpy/hintd/: __init__.py  __main__.py  button.py  ccomm.py  cconstants.py  covid.py  daemon.py  departure.py  protocol.py  shia.py  ui.py  utils.py  weather.py
hostpy/tests/: test_cconstants.py
hostpy/ui/: faked.ui
metric-relay/docs/: architecture.md  interfaces.md
metric-relay/metric_relay/: __main__.py  cli.py  config.py  daemon.py  debug.py  influxdb.py  interface.py  queue.py  smbus.py  snurl.py
metric-relay/metric_relay/sbx/: config.py  source.py  stream.py  wireformat.py
metric-relay/metric_relay/xmpp/: __init__.py  common.py  sink.py  source.py  transport.py
sensor-node/: main.pcb  main.sch
sensor-node-2.0/: fab.kicad_pcb
sensor-node-2.0/docs/: dma.rst  stm32-design.rst  traffic.rst
sensor-node-2.0/nucleo-pinheaders/: nucleo-pinheaders.sch
sensor-node-2.0/sensor-block/: sensor-node-ext-old.kicad_pcb
sensor-node-2.0/tcs-module/: tcs-module.sch
sensor-node-2.0/xbee-breakout/: xbee-breakout.kicad_pcb  xbee-breakout.sch
sensor-node-2.0/xbee-raspberry/: xbee-raspberry.kicad_pcb  xbee-raspberry.sch
sensor-node-ext/: fab.kicad_pcb
sensor-node-ext/docs/: dma.rst  mcu-choice.rst  pinout.rst  stm32-design.rst  timers.rst
sensor-node-ext/noise-amp/: noise-amp.kicad_pcb  noise-amp.pro  noise-amp.sch  noise-amp_smt.kicad_pcb
sensor-node-ext/nucleo-pinheaders/: nucleo-pinheaders.kicad_pcb  nucleo-pinheaders.pro
sensor-node-ext/sensor-block/: USART-to-OneWire.sch  sensor-block.sch  sensor-node-ext-Sa 9. Jul 14:48:46 CEST 2016.kicad_pcb  sensor-node-ext.kicad_pcb  sensor-node-ext.pro  sensor-node-ext.sch  sensor-node-ext_old.kicad_pcb
sensor-node-ext/tcs-module/: tcs-module.kicad_pcb  tcs-module.pro
sensor-node-ext/xbee-breakout/: xbee-breakout.pro
sensor-node-ext/xbee-raspberry/: xbee-raspberry.pro
sensor-node/src/: Makefile  bcd.c  config.h  lcd.c  lcd.h  main.c  systick.c  systick.h  uart.h  uart_onewire.c  uart_onewire.h
sensor-node/src/utils/: mkstrings.py
server/: hintbot.py
server/hintmodules/: __init__.py  __main__.py  caching_requester.py  errors.py  rrdsink.py  utils.py
server/hintmodules/departure/: dvb.py  stanza.py
server/hintmodules/sensor/: stanza.py
server/hintmodules/weather/: forecast_io.py  metno.py  stanza.py  utils.py
server/testdata/: forecast.json
server/tests/: test_caching_requester.py
smbusd/smbusd/: __main__.py  cli.py  daemon.py
utils/: genfont.py  rgbto16.py
